@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-03
+2012-07-12 Ingrid Ofte
+- Restored chunk/stream in the file names, if someone wants to change 
+  it then use configuration file
+
 Tag: V00-01-02
 2012-05-15 Ingrid Ofte
 - Removed the chunk and stream from output file data name. 
